@@ -1,3 +1,9 @@
+Wed May 10 00:07:16 2006  Tim Janik  <timj@gtk.org>
+
+	* birnetthread.c: minor protability fix for sched_yield().
+
+	* birnetthreadxx.cc: use birnet_thread_yield().
+
 Tue May  9 22:55:08 2006  Tim Janik  <timj@gtk.org>
 
 	* birnettests.h (TEST_CALIBRATION): give up the current time slice 
